--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.5",
     "express": "*",
     "express-handlebars": "*",
     "mongodb": "^3.6.4",
-    "mongoose": "^5.11.15"
+    "mongoose": "^5.11.15",
+    "nodemon": "^2.0.7",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6"
   },
   "author": "Matias Gallego",
   "license": "ISC"
